# bddframe

./: .cucumber_stubs.py  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROBLEM.md  QUICK_START_AGENTIC.md  QUICK_START_GUIDE.md  README.md  azure-pipelines-windows.yml  azure-pipelines.yml  environments.yaml  pyproject.toml  secrets.env.example
.claude/: settings.json
.devcontainer/: devcontainer.json
.squad/: team.md
bddframe/: cli.py  config.py  healing.py  hooks.py  log.py  preconditions.py  rca.py  secrets_akv.py
docs/: README.md  architecture.md  design-history.md  enterprise-plan.md  feature-packages.md  future-roadmap.md  getting-started.md  glossary.md  guide.md  how-it-works-eli5.md  llm.md  peer-review-2026-06-28.md  phase-01-foundation.md  phase-02-web-agent.md  phase-03-hardening.md  phase-03-visual-agent.md  phase-04-reporting.md  phase-04-visual-agent.md  phase-05-cli-devops.md  phase-05-reporting.md  phase-06-cli-devops.md  phase-06-syntax-highlighting.md  phase-07-syntax-highlighting.md  phase-08-test-development.md  phase-09-element-disambiguation.md  phase-10-foundry-local-agent.md  phase-11-step-coverage.md  phase-12-step-dependencies.md  plan_llm_mode.md  pom-key-mapping.md  preconditions-plan.md  resolution-hierarchy.md  run-examples.md  steps_dictionary.md  tech-stack.md  writing-a-test.md
features/: environment.py
noodle/: cli.py  config.py  healing.py  hooks.py  log.py  preconditions.py  rca.py  secrets_akv.py
plans/: BFRAME_0033-test-run-fixes.md  BFRAME_0034-agent-engine-architecture.md  NOOD_0005-feature-packaging.md  NOOD_0006-llm-selection.md  NOOD_0007-capability-gap-assessment.md  enterprise-plan.md  future-roadmap.md  pattern-coverage.md  peer-review-2026-06-28.md  preconditions-plan.md
scripts/: list_features.py
test-app-vhs-vault/: package.json
(+192 files in other folders)
