[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bddframe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "behave>=1.2.6",
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.0.0"]
lsp = ["pygls>=1.3.0", "lsprotocol>=2023.0.0"]
all = ["litellm>=1.0.0", "pygls>=1.3.0", "lsprotocol>=2023.0.0"]

[project.scripts]
bddframe     = "bddframe.cli:app"
bddframe-lsp = "bddframe.lsp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["bddframe"]
